[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquidlib"
version = "0.1.1"
authors = [
    { name = "Roman Gurovich", email = "romangurovich@gmail.com" },
]
description = "A library for handling liquid properties and pipetting parameters"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Biology",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Scientific/Engineering :: Lab Automation"
]
keywords = ["liquid", "robotics", "laboratory", "lab automation"]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/LiquidLib/liquidlib"
"Bug Tracker" = "https://github.com/LiquidLib/liquidlib/issues"

[tool.hatch.build.targets.wheel]
packages = ["liquidlib"]

[tool.hatch.build.targets.wheel.shared-data]
"py.typed" = "py.typed"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
